--- a/index.html
+++ b/index.html
@@ -242,11 +242,13 @@
               <span class="skills__start-level">0</span>
               <span class="skills__start-level">5</span>
             </div>
+            <div class="skills">
               <div class="skills__item">
                 <i class="icon icon-skills icon-skills-img"><img class="skills__img" src="./assets/icons/AE.svg" alt="AE logo"></i>
                 <p class="skills__tech">After Effects</p>
                 <div class="skills__bar skills__bar--10"></div>
               </div>
+            </div>
           </div>
         </article>
 
@@ -263,7 +265,7 @@
               <span class="project__tag">#Responsive</span>
             </div>
             <h2 class="card__title">Shop Website</h2>
-            <p class="card__text">Sitio web de venta de productos con temática de los muñecos Funko Pop. Diseñado con HTML, CSS y Js, y desarrollado un backend con NodeJs con dependencias express, session, validator, dotenv, ejs, cookie-parser, multer, mysql2 y sequelize.</p>
+            <p class="card__text project--text">Sitio web de venta de productos con temática de los muñecos Funko Pop. Diseñado con HTML, CSS y Js, y desarrollado un backend con NodeJs con dependencias express, session, validator, dotenv, ejs, cookie-parser, multer, mysql2 y sequelize.</p>
             <div class="buttons">
               <a href="" class="button button--primary" target="_blank">Demo</a>
               <a href="https://github.com/AstorDioguardi/Challenge-Integrador" class="button button--ghost" target="_blank">Code</a>
@@ -281,7 +283,7 @@
               <span class="project__tag">#JavaScript</span>
             </div>
             <h2 class="card__title">Calculadora</h2>
-            <p class="card__text">Calculadora virtual diseñada en HTML, CSS y Js, para realizar cálculos matemáticos básicos.</p>
+            <p class="card__text project--text">Calculadora virtual diseñada en HTML, CSS y Js, para realizar cálculos matemáticos básicos.</p>
             <div class="buttons">
               <a href="" class="button button--primary" target="_blank">Demo</a>
               <a href="https://github.com/AstorDioguardi/Calcuator" class="button button--ghost" target="_blank">Code</a>
