modifico el link de wp

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="card__link">
               <i class="fab fa-whatsapp icon"></i>
-              <a href="https://wa.me/393474933243">+39-34-7493-3243</a>
+              <a href="https://wa.me/393474933243" target="_blank">+39-34-7493-3243</a>
             </div>
             <div class="card__link">
               <i class="fab fa-linkedin icon"></i>
