--- a/index.html
+++ b/index.html
@@ -272,6 +272,25 @@
         </article>
         <article class="card card--project">
           <div class="card__image-container">
+            <img src="./assets/images/calculator-react.png" alt="Calculadora React" class="card__image">
+          </div>
+          <div class="project">
+            <div class="project__tags">
+              <span class="project__tag">#HTML</span>
+              <span class="project__tag">#CSS</span>
+              <span class="project__tag">#JavaScript</span>
+              <span class="project__tag">#React</span>
+            </div>
+            <h2 class="card__title" data-section="projects" data-value="first-project-title">Calculadora 2</h2>
+            <p class="card__text project--text" data-section="projects" data-value="first-project-description">Calculadora virtual diseñada en HTML, CSS, Js y React, para realizar cálculos matemáticos básicos.</p>
+            <div class="buttons">
+              <a href="https://astordioguardi.github.io/Calcuator/" class="button button--primary" target="_blank">Demo</a>
+              <a href="https://github.com/AstorDioguardi/Calcuator-React" class="button button--ghost" target="_blank">Code</a>
+            </div>
+          </div>
+        </article>
+        <article class="card card--project">
+          <div class="card__image-container">
             <img src="./assets/images/calculator.png" alt="Calculadora" class="card__image">
           </div>
           <div class="project">
