--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
               <span class="project__tag">#JavaScript</span>
               <span class="project__tag">#React</span>
             </div>
-            <h2 class="card__title" data-section="projects" data-value="first-project-title">Calculadora 2</h2>
-            <p class="card__text project--text" data-section="projects" data-value="first-project-description">Calculadora virtual diseñada en HTML, CSS, Js y React, para realizar cálculos matemáticos básicos.</p>
+            <h2 class="card__title" data-section="projects" data-value="third-project-title">Calculadora 2</h2>
+            <p class="card__text project--text" data-section="projects" data-value="third-project-description">Calculadora virtual diseñada en HTML, CSS, Js y React, para realizar cálculos matemáticos básicos.</p>
             <div class="buttons">
               <a href="https://astordioguardi.github.io/Calcuator/" class="button button--primary" target="_blank">Demo</a>
               <a href="https://github.com/AstorDioguardi/Calcuator-React" class="button button--ghost" target="_blank">Code</a>
