--- a/index.html
+++ b/index.html
@@ -265,8 +265,27 @@
             <h2 class="card__title">Shop Website</h2>
             <p class="card__text project--text" data-section="projects" data-value="second-project-description">Sitio web de venta de productos con temática de los muñecos Funko Pop. Diseñado con HTML, CSS y Js, y desarrollado un backend con NodeJs con dependencias express, session, validator, dotenv, ejs, cookie-parser, multer, mysql2 y sequelize.</p>
             <div class="buttons">
-              <a href="" class="button button--primary" target="_blank">Demo</a>
+              <!-- <a href="" class="button button--primary" target="_blank">Demo</a> -->
               <a href="https://github.com/AstorDioguardi/Challenge-Integrador" class="button button--ghost" target="_blank">Code</a>
+            </div>
+          </div>
+        </article>
+        <article class="card card--project">
+          <div class="card__image-container">
+            <img src="./assets/images/things-to-do.png" alt="Things to do" class="card__image">
+          </div>
+          <div class="project">
+            <div class="project__tags">
+              <span class="project__tag">#HTML</span>
+              <span class="project__tag">#CSS</span>
+              <span class="project__tag">#JavaScript</span>
+              <span class="project__tag">#React</span>
+            </div>
+            <h2 class="card__title" data-section="projects" data-value="fourth-project-title">Lista de Tareas</h2>
+            <p class="card__text project--text" data-section="projects" data-value="fourth-project-description">Sitio web para poder añadir una lista de tareas, donde uno puede agregar la tarea a realizar que desee, marcarla como completada o eliminarla del listado.</p>
+            <div class="buttons">
+              <!-- <a href="https://astordioguardi.github.io/Calcuator/" class="button button--primary" target="_blank">Demo</a> -->
+              <a href="https://github.com/AstorDioguardi/To-Do-List" class="button button--ghost" target="_blank">Code</a>
             </div>
           </div>
         </article>
@@ -284,7 +303,7 @@
             <h2 class="card__title" data-section="projects" data-value="third-project-title">Calculadora 2</h2>
             <p class="card__text project--text" data-section="projects" data-value="third-project-description">Calculadora virtual diseñada en HTML, CSS, Js y React, para realizar cálculos matemáticos básicos.</p>
             <div class="buttons">
-              <a href="https://astordioguardi.github.io/Calcuator/" class="button button--primary" target="_blank">Demo</a>
+              <!-- <a href="https://astordioguardi.github.io/Calcuator/" class="button button--primary" target="_blank">Demo</a> -->
               <a href="https://github.com/AstorDioguardi/Calcuator-React" class="button button--ghost" target="_blank">Code</a>
             </div>
           </div>
