--- a/index.html
+++ b/index.html
@@ -272,6 +272,25 @@
         </article>
         <article class="card card--project">
           <div class="card__image-container">
+            <img src="./assets/images/shopsport.png" alt="Shop Sport" class="card__image">
+          </div>
+          <div class="project">
+            <div class="project__tags">
+              <span class="project__tag">#HTML</span>
+              <span class="project__tag">#CSS</span>
+              <span class="project__tag">#JavaScript</span>
+              <span class="project__tag">#React</span>
+            </div>
+            <h2 class="card__title" data-section="projects" data-value="third-project-title">Shop Sport</h2>
+            <p class="card__text project--text" data-section="projects" data-value="third-project-description">Sitio web básico de compra de productos deportivos. Realizando con JavaScript la funcionalidad del carrito de compras.</p>
+            <div class="buttons">
+              <a href="https://astordioguardi.github.io/Shop-Sport/" class="button button--primary" target="_blank">Demo</a>
+              <a href="https://github.com/AstorDioguardi/Shop-Sport" class="button button--ghost" target="_blank">Code</a>
+            </div>
+          </div>
+        </article>
+        <article class="card card--project">
+          <div class="card__image-container">
             <img src="./assets/images/things-to-do.png" alt="Things to do" class="card__image">
           </div>
           <div class="project">
@@ -286,25 +305,6 @@
             <div class="buttons">
               <!-- <a href="https://astordioguardi.github.io/Calcuator/" class="button button--primary" target="_blank">Demo</a> -->
               <a href="https://github.com/AstorDioguardi/To-Do-List" class="button button--ghost" target="_blank">Code</a>
-            </div>
-          </div>
-        </article>
-        <article class="card card--project">
-          <div class="card__image-container">
-            <img src="./assets/images/calculator-react.png" alt="Calculadora React" class="card__image">
-          </div>
-          <div class="project">
-            <div class="project__tags">
-              <span class="project__tag">#HTML</span>
-              <span class="project__tag">#CSS</span>
-              <span class="project__tag">#JavaScript</span>
-              <span class="project__tag">#React</span>
-            </div>
-            <h2 class="card__title" data-section="projects" data-value="third-project-title">Calculadora 2</h2>
-            <p class="card__text project--text" data-section="projects" data-value="third-project-description">Calculadora virtual diseñada en HTML, CSS, Js y React, para realizar cálculos matemáticos básicos.</p>
-            <div class="buttons">
-              <!-- <a href="https://astordioguardi.github.io/Calcuator/" class="button button--primary" target="_blank">Demo</a> -->
-              <a href="https://github.com/AstorDioguardi/Calcuator-React" class="button button--ghost" target="_blank">Code</a>
             </div>
           </div>
         </article>
